Set flag add-opens.